--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -622,6 +622,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -685,6 +686,7 @@ allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
+allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
