--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1433,6 +1433,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1496,6 +1497,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
+set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
@@ -1584,6 +1586,7 @@ set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
+set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.167;
 set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
@@ -1832,6 +1835,7 @@ set_real_ip_from 93.113.25.239;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
+set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
