--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -64,7 +64,6 @@ set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.5.188;
 set_real_ip_from 107.189.8.136;
 set_real_ip_from 107.189.8.181;
-set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
 set_real_ip_from 108.59.12.3;
@@ -92,6 +91,7 @@ set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.172.205.8;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 121.78.28.166;
@@ -195,7 +195,6 @@ set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.149.128.34;
 set_real_ip_from 177.153.51.238;
-set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
@@ -407,7 +406,6 @@ set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.185;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
-set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
 set_real_ip_from 185.241.208.81;
@@ -514,7 +512,6 @@ set_real_ip_from 192.42.116.24;
 set_real_ip_from 192.42.116.26;
 set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.42.116.28;
-set_real_ip_from 192.99.149.111;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
 set_real_ip_from 193.189.100.194;
@@ -564,6 +561,10 @@ set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.167.206.157;
+set_real_ip_from 198.251.84.163;
+set_real_ip_from 198.251.84.237;
+set_real_ip_from 198.251.88.18;
+set_real_ip_from 198.251.89.96;
 set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.212.160;
 set_real_ip_from 198.58.107.53;
@@ -692,6 +693,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:b011:4006:545c::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -970,7 +972,16 @@ set_real_ip_from 2605:6400:20:ff9::1;
 set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
-set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
+set_real_ip_from 2605:6400:30:f174::;
+set_real_ip_from 2605:6400:30:f174:1:1:1:1;
+set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
+set_real_ip_from 2605:6400:30:f174:1:2:3:4;
+set_real_ip_from 2605:6400:30:f174::42;
+set_real_ip_from 2605:6400:30:f174:42:42::;
+set_real_ip_from 2605:6400:30:f174:42:42:42:0;
+set_real_ip_from 2605:6400:30:f174:42:42:42:42;
+set_real_ip_from 2605:6400:30:f174:4:3:2:1;
+set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -984,7 +995,6 @@ set_real_ip_from 2605:e440:3::3ef;
 set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::4894;
-set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2620:18c:0:192::e0:130;
@@ -1120,7 +1130,6 @@ set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
-set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
@@ -1426,7 +1435,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
-set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1471,7 +1479,6 @@ set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:185;
 set_real_ip_from 2a12:a800:2:1:185:241:208:202;
 set_real_ip_from 2a12:a800:2:1:185:241:208:204;
-set_real_ip_from 2a12:a800:2:1:185:241:208:206;
 set_real_ip_from 2a12:a800:2:1:185:241:208:71;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:185:241:208:82;
@@ -1566,7 +1573,6 @@ set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
-set_real_ip_from 45.138.16.161;
 set_real_ip_from 45.138.16.164;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
@@ -1743,6 +1749,7 @@ set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
+set_real_ip_from 74.208.79.7;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.246.98.159;
 set_real_ip_from 77.48.28.204;
@@ -1828,7 +1835,6 @@ set_real_ip_from 93.113.25.239;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
-set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
