--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -162,7 +162,6 @@ set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d887;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d896;
 set_real_ip_from 2605:6400:20:ff9::1;
-set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f174::;
@@ -400,6 +399,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -681,7 +681,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:107;
 set_real_ip_from 2a12:a800:2:1:45:138:16:113;
 set_real_ip_from 2a12:a800:2:1:45:138:16:164;
 set_real_ip_from 2a12:a800:2:1:45:138:16:222;
-set_real_ip_from 2a12:a800:2:1:45:138:16:230;
 set_real_ip_from 2a12:a800:2:1:45:138:16:231;
 set_real_ip_from 2a12:a800:2:1:45:138:16:239;
 set_real_ip_from 2a12:a800:2:1:45:138:16:240;
@@ -705,7 +704,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
-set_real_ip_from 2a12:a800:2:1:45:141:215:88;
 set_real_ip_from 2a12:a800:2:1:45:141:215:90;
 set_real_ip_from 2a12:a800:2:1:45:141:215:95;
 set_real_ip_from 2a12:a800:2:1:45:141:215:97;
