--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -399,8 +399,10 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
+allow 2a04:52c0:115:df08::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
+allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
@@ -622,6 +624,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -664,6 +667,7 @@ allow 2a12:a800:1:1:2:58:56:93;
 allow 2a12:a800:1:1:45:154:98:33;
 allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:185;
+allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
 allow 2a12:a800:2:1:185:241:208:71;
